Error Mitigation/MagiCoder/Data/javax_management_remote/javax_management_remoteOutputResult.txt
Sample: JMXConnectionNotification_2
----------------------------------------------------------------
output:
./Data/javax_management_remote/javaFiles/JMXConnectionNotification_2.java:5: error: constructor JMXConnectionNotification in class JMXConnectionNotification cannot be applied to given types;
        JMXConnectionNotification notification = new JMXConnectionNotification("OPEN", "Connection ID", "Connection ID");
                                                 ^
  required: String,Object,String,long,String,Object
  found:    String,String,String
  reason: actual and formal argument lists differ in length
1 error


================================================================

Sample: JMXPrincipal_2
----------------------------------------------------------------
stdout:
Name: username

================================================================

Sample: JMXPrincipal_5
----------------------------------------------------------------
stdout:
false
true

================================================================

Sample: JMXPrincipal_6
----------------------------------------------------------------
stdout:
Hash code: -265713450

================================================================

Sample: JMXPrincipal_7
----------------------------------------------------------------
stdout:
JMXPrincipal:  username

================================================================

Sample: JMXServiceURL_4
----------------------------------------------------------------
stdout:
Port: 0

================================================================

Sample: JMXServiceURL_5
----------------------------------------------------------------
stdout:
Protocol: rmi

================================================================

Sample: JMXServiceURL_9
----------------------------------------------------------------
stdout:
service:jmx:rmi:///jndi/rmi://localhost:1099/jmxrmi

================================================================

Sample: JMXServiceURL_10
----------------------------------------------------------------
stdout:
true
true

================================================================

Sample: JMXServiceURL_11
----------------------------------------------------------------
stdout:
Hash code: -939847383

================================================================

